# AIS2203_Project_Sphero

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
app/: CMakeLists.txt  main.cpp
demos/: CMakeLists.txt
demos/colorCalibration/: CMakeLists.txt  ColorCalibration_demo.cpp
demos/objectDetection/: CMakeLists.txt  objectDetection_demo.cpp
demos/observer/: CMakeLists.txt  observer_demo.cpp
demos/taskManager/: CMakeLists.txt  taskManager_demo.cpp
demos/taskQueue/: CMakeLists.txt  taskQueue_demo.cpp
demos/usbCamera/: CMakeLists.txt  USBCamera_demo.cpp
include/sphero/: sphero.hpp
include/sphero/cameras/: PCCamera.hpp  RaspberryCamera.hpp  USBCamera.hpp
include/sphero/controls/: AutonomousControl.hpp  CameraControls.hpp  RobotControls.hpp  XboxInput.hpp  followObject.hpp  keyboardInput.hpp
include/sphero/core/: ImageFetcher.hpp  ImageProcessor.hpp  misc.hpp
include/sphero/math/: MathUtils.hpp
include/sphero/utils/: Json reader.hpp  JsonConverter.hpp  JsonReader.hpp  JsonUtils.hpp  Observer.hpp  TaskManager.hpp  TaskQueue.hpp  ThreadPool.hpp  UserInterface.hpp  Various.hpp  displayBuilder.hpp  enums.hpp  udpClient.hpp
include/sphero/vision/: BallTracker.hpp  ColorCalibration.hpp  ColorCalibrator.hpp  LiveFrameDisplay.hpp  ObjectTracker.hpp  ballTracker.hpp
src/: CMakeLists.txt
src/sphero/cameras/: RaspberryCamera.cpp
src/sphero/controls/: RobotControls.cpp
src/sphero/math/: MathUtils.cpp
src/sphero/utils/: JsonUtils.cpp  Observer.cpp  TaskManager.cpp  TaskQueue.cpp  ThreadPool.cpp
tests/: CMakeLists.txt
tests/cameras/: CMakeLists.txt  RaspberryCamera_test.cpp
tests/controls/: CMakeLists.txt  CameraControls_test.cpp  RobotControls_test.cpp
tests/math/: CMakeLists.txt  MathUtils_test.cpp
tests/utils/: CMakeLists.txt  JsonReader_test.cpp  ThreadPool_test.cpp  keyBoardInput_test.cpp
